Fixed more issues highlighted by sonar